tests/functional/lang/eval-fail-filter-3.err.exp
error:
       … while calling the 'filter' builtin
         at /pwd/lang/eval-fail-filter-3.nix:1:1:
            1| builtins.filter (_: 5) [ "foo" ]
             | ^
            2|

       … while evaluating the return value of the filtering function passed to builtins.filter

       error: expected a Boolean but found an integer: 5
